<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/main_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_primary"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <org.codeforafrica.citizenreporter.starreports.widgets.WPLinearLayoutSizeBound
            app:maxWidth="@dimen/nux_width"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                android:gravity="center">
                <org.codeforafrica.citizenreporter.starreports.widgets.WPTextView
                    style="@style/WordPress.NUXTitle"
                    android:text="@string/app_name"
                    android:id="@+id/nux_help_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"/>

                <org.codeforafrica.citizenreporter.starreports.widgets.WPTextView
                    style="@style/WordPress.NUXGreyButtonNoBg"
                    android:text="@string/about_desc"
                    android:id="@+id/nu_help_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    app:fixWidowWords="true"/>

                <RelativeLayout
                    android:id="@+id/give_feedback"
                    android:layout_height="40dp"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:background="@color/grey_lighten_30"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/my_site_comments_icon"
                        style="@style/MySiteListRowIcon"
                        android:contentDescription="@string/my_site_btn_comments"
                        android:src="@drawable/my_site_icon_comments"
                        android:visibility="gone"/>

                    <org.codeforafrica.citizenreporter.starreports.widgets.WPTextView
                        android:id="@+id/my_site_comments_text_view"
                        style="@style/MySiteListRowTextView"
                        android:layout_toRightOf="@id/my_site_comments_icon"
                        android:text="@string/give_feedback"
                        android:gravity="center"/>

                </RelativeLayout>

                <View style="@style/JustADividerView"
                    android:layout_marginBottom="16dp"/>

                <org.codeforafrica.citizenreporter.starreports.widgets.WPTextView
                    style="@style/WordPress.NUXPrimaryButton"
                    android:text="@string/contact_us"
                    android:id="@+id/contact_us_button"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:visibility="gone"/>

                <org.codeforafrica.citizenreporter.starreports.widgets.WPTextView
                    style="@style/WordPress.NUXPrimaryButton"
                    android:text="@string/browse_our_faq_button"
                    android:id="@+id/faq_button"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:visibility="gone"/>

                <org.codeforafrica.citizenreporter.starreports.widgets.WPTextView
                    style="@style/WordPress.NUXPrimaryButton"
                    android:text="@string/reader_title_applog"
                    android:id="@+id/applog_button"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:visibility="gone"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:id="@+id/bottom_logo"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/c4a_white"/>
            </LinearLayout>
        </org.codeforafrica.citizenreporter.starreports.widgets.WPLinearLayoutSizeBound>


    </LinearLayout>
</ScrollView>