<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical">
        <org.codeforafrica.citizenreporter.starreports.widgets.WPLinearLayoutSizeBound
            app:maxWidth="@dimen/nux_width"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            android:orientation="vertical">



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_margin="5dp">

                <org.codeforafrica.citizenreporter.starreports.widgets.OpenSansEditText
                    android:id="@+id/email_address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/WordPress.NUXEditText"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    app:persistenceEnabled="true"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:src="@drawable/dashicon_email"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:tint="@color/grey_darken_10"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:id="@+id/relativeLayout"
                android:layout_margin="5dp">

                <org.codeforafrica.citizenreporter.starreports.widgets.OpenSansEditText
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/WordPress.NUXEditText"
                    android:inputType="textUri"
                    android:hint="@string/full_name"
                    app:persistenceEnabled="true"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:src="@drawable/dashicon_admin_users"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:tint="@color/grey_darken_10"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/nux_button_height"
                android:layout_margin="2dp">

                <org.codeforafrica.citizenreporter.starreports.widgets.WPTextView
                    style="@style/WordPress.NUXPrimaryButton"
                    android:id="@+id/signup_button"
                    android:layout_width="match_parent"
                    android:text="@string/edit_account"
                    android:clickable="true"
                    android:gravity="center"
                    android:enabled="false"/>

                <RelativeLayout
                    android:id="@+id/nux_sign_in_progress_bar"
                    style="@style/WordPress.NUXPrimaryButton"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:enabled="false">

                    <ProgressBar
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>

            </RelativeLayout>


        </org.codeforafrica.citizenreporter.starreports.widgets.WPLinearLayoutSizeBound>


    </LinearLayout>
</ScrollView>
